--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,11 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug {
+            buildConfigField 'String', "ApiKey", THE_GUARDIAN_API_KEY
+        }
         release {
+            buildConfigField 'String', "ApiKey", THE_GUARDIAN_API_KEY
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
