- begin to refactor the code   - use retrofit to call APIs   - organize the code   - remove old classes - add some resources   - add velino fonts   - update strings, dimens and colors   - add some drawables   - add some layouts - update copyrights

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.tarek.newsfeedapp">
+    package="com.example.tarek.news">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -27,7 +27,7 @@ limitations under the License.
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activities.MainActivity"
+            android:name="com.example.tarek.news.views.main.MainActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,11 +35,12 @@ limitations under the License.
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.SettingsActivity"
+        <activity
+            android:name="com.example.tarek.news.views.SettingsActivity"
             android:label="@string/settings_activity_label">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.MainActivity">
+                android:value="com.example.tarek.news.views.main.MainActivity">
 
             </meta-data>
         </activity>
