--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".views.SettingsActivity"
+            android:name=".views.settings.SettingsActivity"
             android:label="@string/settings_activity_label">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
