--- a/gradle.properties
+++ b/gradle.properties
@@ -27,4 +27,4 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-THE_GUARDIAN_API_KEY="test"
+THE_GUARDIAN_API_KEY="test2"
