--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".views.sections.SectionsActivity"></activity>
+        <activity android:name=".views.sections.SectionsActivity" />
         <activity
             android:name=".views.main.MainActivity"
             android:label="@string/app_name"
@@ -29,7 +29,7 @@
             android:label="@string/settings_activity_label">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.tarek.news.views.main.MainActivity"></meta-data>
+                android:value="com.example.tarek.news.views.main.MainActivity" />
         </activity>
         <activity
             android:name=".views.search.SearchActivity"
