--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        <activity android:name=".views.section.SectionActivity"></activity>
+        <activity android:name=".views.webViewActivity.WebViewActivity" />
         <activity android:name=".views.sections.SectionsActivity" />
         <activity
             android:name=".views.main.MainActivity"
