--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".views.section.SectionActivity"></activity>
-        <activity android:name=".views.webViewActivity.WebViewActivity" />
-        <activity android:name=".views.sections.SectionsActivity" />
         <activity
             android:name=".views.main.MainActivity"
             android:label="@string/app_name"
@@ -26,16 +23,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".views.settings.SettingsActivity"
-            android:label="@string/settings_activity_label">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.tarek.news.views.main.MainActivity" />
-        </activity>
-        <activity
-            android:name=".views.search.SearchActivity"
-            android:label="@string/search_label" />
+        <activity android:name=".views.settings.SettingsActivity" android:label="@string/settings_activity_label"/>
+        <activity android:name=".views.search.SearchActivity" android:label="@string/search_label" />
+        <activity android:name=".views.section.SectionActivity" />
+        <activity android:name=".views.webViewActivity.WebViewActivity" />
+        <activity android:name=".views.sections.SectionsActivity" />
     </application>
+
 
 </manifest>
