--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,12 +19,12 @@
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".views.settings.SettingsActivity" android:label="@string/settings_activity_label"/>
-        <activity android:name=".views.search.SearchActivity" android:label="@string/search_label" />
+        <activity android:name=".views.search.SearchActivity"
+            android:windowSoftInputMode="stateHidden|adjustPan|adjustResize"/>
         <activity android:name=".views.section.SectionActivity" />
         <activity android:name=".views.webViewActivity.WebViewActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
