--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.settings.SettingsActivity" android:label="@string/settings_activity_label"/>
+        <activity android:name=".views.settings.SettingsActivity" android:label="@string/settings_label"/>
         <activity android:name=".views.search.SearchActivity"
             android:windowSoftInputMode="stateHidden|adjustPan|adjustResize"/>
         <activity android:name=".views.section.SectionActivity" />
