- fix an issue in last commit - update some values related to UI - change app icon and some other icons

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,21 +8,21 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/icons8_news_480"
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_round_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
             android:name=".views.main.MainActivity"
-            android:label="@string/app_name"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.settings.SettingsActivity" android:label="@string/settings_label"/>
+        <activity android:name=".views.settings.SettingsActivity"/>
         <activity android:name=".views.search.SearchActivity"
             android:windowSoftInputMode="stateHidden|adjustPan|adjustResize"/>
         <activity android:name=".views.section.SectionActivity" />
