- change app package and update minSDK to 16 - use DatePicker to get form/to Date - add from-date and to-date queries to the API - update SettingsActivity and it's UI

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.tarek.newsfeedapp"
-        minSdkVersion 15
+        applicationId "com.gmail.tarekmabdallah91.news"
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -49,7 +49,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    //implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.github.drawers:SpinnerDatePicker:1.0.6'
     implementation 'com.squareup.picasso:picasso:2.71828'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
