- add paging library (need some enhancements )

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
     implementation 'com.github.drawers:SpinnerDatePicker:1.0.6'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    //adding paging
+    def paging_version = "1.0.0"
+    implementation "android.arch.paging:runtime:$paging_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
