--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:name=".modules.MyApplication"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
             android:name="com.gmail.tarekmabdallah91.news.views.main.MainActivity"
