--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,8 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    implementation 'com.google.code.findbugs:jsr305:3.0.2' // to find dagger2 bugs
+
     //adding paging
     def paging_version = "1.0.1"
     implementation "android.arch.paging:runtime:$paging_version"
