- apply more concepts in DI (still need more ...) - add android-apt: Using this plugin Android Studio will be configured to place the generated sources on the  build path, preventing errors in the IDE. When using the apt scope, the annotation processor will not be included in your final APK - add AndroidDevMetrics lib: is a performance metrics library which will help you find potential performance issues in your Android app. Thanks to it we are able to measure objects graph initialization in Dagger 2, Activities lifecycle methods timings and frame drops for each screen in app. https://mirekstanek.online/androiddevmetrics%e2%80%8a-%e2%80%8aactivity-lifecycle-methods-tracing/ - add AutoFactory which generates factories that can be used on their own or with JSR-330-compatible dependency injectors from a simple annotation - update ReadMe

--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
-        
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.3.2' // when updated made some errors
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8' // the latest version of the android-apt plugin
+//        classpath 'com.frogermcs.androiddevmetrics:androiddevmetrics-plugin:0.7' // old version
     }
 }
 
@@ -19,6 +17,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+
         maven { url "https://jitpack.io" }
     }
 }
@@ -26,3 +25,4 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
