--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@
  */
 
 apply plugin: 'com.android.application'
+//apply plugin: 'com.frogermcs.androiddevmetrics' // old version
 
 android {
     compileSdkVersion 28
@@ -25,6 +26,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions { // to solve Annotation processors must be explicitly declared now
+            annotationProcessorOptions {
+                includeCompileClasspath false
+            }
+        }
     }
     buildTypes {
         debug {
@@ -57,8 +64,9 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 
-    implementation 'com.google.dagger:dagger:2.13'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.13'
+    def dagger_version = "2.17"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
 
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
@@ -70,6 +78,11 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'com.google.code.findbugs:jsr305:3.0.2' // to find dagger2 bugs
+
+    implementation 'com.google.auto.factory:auto-factory:1.0-beta3'
+    annotationProcessor 'com.google.auto.factory:auto-factory:1.0-beta3'
+
+    implementation 'javax.annotation:jsr250-api:1.0' // to fix cannot find symbol class Generated
 
     //adding paging
     def paging_version = "1.0.1"
