- add AboutMe library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,5 +109,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(path: ':aboutme')
+    implementation 'com.github.tarekmabdallah91:CVapp:0.1.3'
 }
