--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -78,9 +81,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 
-    implementation 'io.reactivex.rxjava2:rxjava:2.0.2'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    // rx
+    implementation 'io.reactivex:rxjava:1.2.7'
+//    implementation 'io.reactivex.rxjava2:rxjava:2.0.2'
+//    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+//    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
