--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".views.easyViewActivity.EasyViewActivity"></activity>
+        <activity android:name=".views.easyViewActivity.EasyViewActivity"/>
         <activity android:name=".views.splashActivity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.gmail.tarekmabdallah91.smooth.ui.view.SimpleActivity"/>
         <activity android:name=".views.mainSection.MainSectionActivity" />
         <activity android:name=".views.settings.SettingsActivity" />
         <activity
